Jenkinsfile nicht mehr von NodeJS Plugin abhängig.

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,46 +1,95 @@
 <!DOCTYPE html>
-<html>
+<html class="loading">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title><%= htmlWebpackPlugin.options.title %></title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 
-  <meta name="description" content="<%= htmlWebpackPlugin.options.title %>">
+    <meta name="description" content="<%= htmlWebpackPlugin.options.title %>">
 
-  <% if (webpackConfig.htmlElements.headTags) { %>
-  <!-- Configured Head Tags  -->
-  <%= webpackConfig.htmlElements.headTags %>
-  <% } %>
+    <% if (webpackConfig.htmlElements.headTags) { %>
+    <!-- Configured Head Tags  -->
+    <%= webpackConfig.htmlElements.headTags %>
+    <% } %>
 
-  <!-- base url -->
-  <base href="<%= htmlWebpackPlugin.options.metadata.baseUrl %>">
+    <!-- base url -->
+    <base href="<%= htmlWebpackPlugin.options.metadata.baseUrl %>">
 
 
 </head>
 
 <body>
 
-  <app>
+<app>
+    <svg width='120px' height='120px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"
+         preserveAspectRatio="xMidYMid" class="uil-default">
+        <rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect>
+        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
+              transform='rotate(0 50 50) translate(0 -30)'>
+            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0s' repeatCount='indefinite'/>
+        </rect>
+        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
+              transform='rotate(30 50 50) translate(0 -30)'>
+            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.08333333333333333s'
+                     repeatCount='indefinite'/>
+        </rect>
+        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
+              transform='rotate(60 50 50) translate(0 -30)'>
+            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.16666666666666666s'
+                     repeatCount='indefinite'/>
+        </rect>
+        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
+              transform='rotate(90 50 50) translate(0 -30)'>
+            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.25s' repeatCount='indefinite'/>
+        </rect>
+        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
+              transform='rotate(120 50 50) translate(0 -30)'>
+            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.3333333333333333s'
+                     repeatCount='indefinite'/>
+        </rect>
+        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
+              transform='rotate(150 50 50) translate(0 -30)'>
+            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.4166666666666667s'
+                     repeatCount='indefinite'/>
+        </rect>
+        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
+              transform='rotate(180 50 50) translate(0 -30)'>
+            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.5s' repeatCount='indefinite'/>
+        </rect>
+        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
+              transform='rotate(210 50 50) translate(0 -30)'>
+            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.5833333333333334s'
+                     repeatCount='indefinite'/>
+        </rect>
+        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
+              transform='rotate(240 50 50) translate(0 -30)'>
+            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.6666666666666666s'
+                     repeatCount='indefinite'/>
+        </rect>
+        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
+              transform='rotate(270 50 50) translate(0 -30)'>
+            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.75s' repeatCount='indefinite'/>
+        </rect>
+        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
+              transform='rotate(300 50 50) translate(0 -30)'>
+            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.8333333333333334s'
+                     repeatCount='indefinite'/>
+        </rect>
+        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
+              transform='rotate(330 50 50) translate(0 -30)'>
+            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.9166666666666666s'
+                     repeatCount='indefinite'/>
+        </rect>
+    </svg>
     Loading...
-  </app>
+</app>
 
-  <!-- Google Analytics: change UA-71073175-1 to be your site's ID -->
-  <script>
-    (function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=r;A[l]=A[l]||function(){
-    (A[l].q=A[l].q||[]).push(arguments)},A[l].l=1*new Date();a=n.createElement(g),
-    r=n.getElementsByTagName(g)[0];a.async=1;a.src=u;r.parentNode.insertBefore(a,r)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-71073175-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-
-  <% if (htmlWebpackPlugin.options.metadata.isDevServer && htmlWebpackPlugin.options.metadata.HMR !== true) { %>
-  <!-- Webpack Dev Server reload -->
-  <script src="/webpack-dev-server.js"></script>
-  <% } %>
+<% if (htmlWebpackPlugin.options.metadata.isDevServer && htmlWebpackPlugin.options.metadata.HMR !== true) { %>
+<!-- Webpack Dev Server reload -->
+<script src="/webpack-dev-server.js"></script>
+<% } %>
 
 
 </body>
