--- a/web/src/index.html
+++ b/web/src/index.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Buchführung"/>
+    <meta name="robots" content="all"/>
+    <meta name="referrer" content="origin"/>
+    <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1"/>
+
+    <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico"/>
+    <link rel="stylesheet"
+          href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500,400italic,700" rel="stylesheet"
+          type="text/css"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet" href="/assets/css/main.css"/>
 
     <title><%= htmlWebpackPlugin.options.title %></title>
 
@@ -18,71 +30,86 @@
     <base href="<%= htmlWebpackPlugin.options.metadata.baseUrl %>">
 
 
+    <style>
+        /* Center the loader */
+        #loader {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            z-index: 1;
+            width: 150px;
+            height: 150px;
+            margin: -75px 0 0 -75px;
+            border: 16px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 16px solid #3498db;
+            width: 120px;
+            height: 120px;
+            -webkit-animation: spin 2s linear infinite;
+            animation: spin 2s linear infinite;
+        }
+
+        @-webkit-keyframes spin {
+            0% {
+                -webkit-transform: rotate(0deg);
+            }
+            100% {
+                -webkit-transform: rotate(360deg);
+            }
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        /* Add animation to "page content" */
+        .animate-bottom {
+            position: relative;
+            -webkit-animation-name: animatebottom;
+            -webkit-animation-duration: 1s;
+            animation-name: animatebottom;
+            animation-duration: 1s
+        }
+
+        @-webkit-keyframes animatebottom {
+            from {
+                bottom: -100px;
+                opacity: 0
+            }
+            to {
+                bottom: 0px;
+                opacity: 1
+            }
+        }
+
+        @keyframes animatebottom {
+            from {
+                bottom: -100px;
+                opacity: 0
+            }
+            to {
+                bottom: 0;
+                opacity: 1
+            }
+        }
+
+        #myDiv {
+            display: none;
+            text-align: center;
+        }
+    </style>
+
 </head>
 
-<body>
+<body class="l-offset-nav">
 
 <app>
-    <svg width='120px' height='120px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"
-         preserveAspectRatio="xMidYMid" class="uil-default">
-        <rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect>
-        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
-              transform='rotate(0 50 50) translate(0 -30)'>
-            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0s' repeatCount='indefinite'/>
-        </rect>
-        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
-              transform='rotate(30 50 50) translate(0 -30)'>
-            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.08333333333333333s'
-                     repeatCount='indefinite'/>
-        </rect>
-        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
-              transform='rotate(60 50 50) translate(0 -30)'>
-            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.16666666666666666s'
-                     repeatCount='indefinite'/>
-        </rect>
-        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
-              transform='rotate(90 50 50) translate(0 -30)'>
-            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.25s' repeatCount='indefinite'/>
-        </rect>
-        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
-              transform='rotate(120 50 50) translate(0 -30)'>
-            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.3333333333333333s'
-                     repeatCount='indefinite'/>
-        </rect>
-        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
-              transform='rotate(150 50 50) translate(0 -30)'>
-            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.4166666666666667s'
-                     repeatCount='indefinite'/>
-        </rect>
-        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
-              transform='rotate(180 50 50) translate(0 -30)'>
-            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.5s' repeatCount='indefinite'/>
-        </rect>
-        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
-              transform='rotate(210 50 50) translate(0 -30)'>
-            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.5833333333333334s'
-                     repeatCount='indefinite'/>
-        </rect>
-        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
-              transform='rotate(240 50 50) translate(0 -30)'>
-            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.6666666666666666s'
-                     repeatCount='indefinite'/>
-        </rect>
-        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
-              transform='rotate(270 50 50) translate(0 -30)'>
-            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.75s' repeatCount='indefinite'/>
-        </rect>
-        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
-              transform='rotate(300 50 50) translate(0 -30)'>
-            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.8333333333333334s'
-                     repeatCount='indefinite'/>
-        </rect>
-        <rect x='46.5' y='40' width='7' height='20' rx='5' ry='5' fill='#00b2ff'
-              transform='rotate(330 50 50) translate(0 -30)'>
-            <animate attributeName='opacity' from='1' to='0' dur='1s' begin='0.9166666666666666s'
-                     repeatCount='indefinite'/>
-        </rect>
-    </svg>
+    <div id="loader"></div>
     Loading...
 </app>
 
