--- a/web/src/index.html
+++ b/web/src/index.html
@@ -10,8 +10,8 @@
     <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1"/>
 
     <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico"/>
-    <link rel="stylesheet"
-          href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css"/>
+    <!--<link rel="stylesheet"-->
+    <!--href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css"/>-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500,400italic,700" rel="stylesheet"
           type="text/css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
