--- a/web/src/index.html
+++ b/web/src/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <base href="/">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -10,9 +11,9 @@
 
 <body>
 
-<app>
+<app-dominium>
     Loading...
-</app>
+</app-dominium>
 
 </body>
 </html>
