--- a/haushaltsbuch-app/src/index.html
+++ b/haushaltsbuch-app/src/index.html
@@ -11,6 +11,11 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div style="padding: 20%;text-align:center;">
+      <img src="https://camo.githubusercontent.com/5e708dbe0cf622ebdbdab5be0ede859ceb08ab91/68747470733a2f2f63646e2e7261776769742e636f6d2f54657261646174612f636f76616c656e742f646576656c6f702f7372632f6170702f6173736574732f69636f6e732f636f76616c656e742e737667" width="100">
+      <h3>Haushaltsbuch App wird geladen...</h3>
+    </div>
+  </app-root>
 </body>
 </html>
